--- a/MeuProjeto/src/app/app.component.html
+++ b/MeuProjeto/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-menu></app-menu>
-<app-home></app-home>
+<router-outlet></router-outlet> <!-- Sinaliza exatamente onde o componente da rota deve ser renderizado -->
 <app-footer></app-footer>
